--- a/lambda/lambda_script/config.toml
+++ b/lambda/lambda_script/config.toml
@@ -1,9 +1,9 @@
 [api]
 api_url="https://virtserver.swaggerhub.com/wcd_de_lab/top10/1.0.0/add"
 
-[aws]
+[s3]
 bucket='de-exercise-data-bucket'
-folder='input/'
+folder='input'
 
 [db]
 host='cgfixubzkzib.us-east-1.rds.amazonaws.com'
